# tenchu-decomp

./: .gitignore  Build  CLAUDE.md  Makefile  PLAN.md  README.md  decomp.yaml  diff_settings.py  flake.nix
config/: functions.ending.exe.tsv  functions.main.exe.tsv  functions.menu.exe.tsv  functions.trial.exe.tsv  fuzzy.main.exe.tsv  gte-allowlist.txt  handwritten-asm.txt  psyq-objects.main.exe.json  reloc-data.main.exe.json  splat.ending.exe.yaml  splat.main.exe.yaml  splat.menu.exe.yaml  splat.run.exe.yaml  splat.slps_019.01.yaml  splat.trial.exe.yaml  symbols.ending.exe.txt  symbols.main.exe.txt  symbols.menu.exe.txt  symbols.trial.exe.txt
disks/: README.md
docs/: README.md  autorules-index.md  build-system.md  building-an-iso.md  compiler-facts.md  cookbook-audit.md  debugging-vscode.md  decomp-dev.md  flywheel-handoff.md  ghidra-bridge.md  gte-policy.md  matching-cookbook.md  modding-and-nonmatching.md  orchestration.md  project-layout.md  psx-exe-finalizer.md  psx-sym.md  psyq-headers.md  psyq-object-lane.md  relocatable-build.md  relocatable-data.md  shape-zoo.md  toolchain.md
include/: macro.inc  types.h
nix/: gcc-2.8.1-gs107-backend.patch  maspsx-gp-extern.patch
reference/: character_state-to-humanoid.tsv  demo-psxexe.functions.tsv  psxsym-applied.tsv  psxsym-candidates.tsv  psxsym-data.tsv  psxsym-protos.h  psxsym-statics.tsv  psxsym-tu-map.tsv  psxsym-types.h  psxsym-unnamed.tsv  psxsym-unplaced.tsv  xexe-ending.exe.tsv  xexe-menu.exe.tsv  xexe-trial.exe.tsv
shake/: tenchu-build.cabal
shake/src/: Build.hs
tools/: access.py  asmdiff.py  cc1says.py  (+75 more)
(+947 files in other folders)
